Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-19001

Disabling couchstore IO buffering triggers 'vbucket deletion doesn't affect new data' test failure

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 5.0.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      In a recent gerrit patch I accidentally set IO buffering to always be disabled in CouchKVStore. This resulted in the consistent failure of the 'vbucket deletion doesn't affect new data' test in ep_testsuite_basic when not run under ThreadSanitizer which indicates there is a potential race if disk operations are slowed down / unbuffered.

      I did spend some time looking into, but the only significant thing I found is that the couchstore file did not get created on disk before the test started with the buffering disabled.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jung-sang Jung-Sang Ahn (Inactive)
              will.gardner Will Gardner (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty