MB-19001: Append CREATE flag even for non-zero open flags

* If we disable buffered IO, then open option flag will have non-zero
value, and accordingly CouchKVStore::openDB_retry will not try to open
the file with CREATE flag. It will cause file open failure.

* Modified the code to make it work correctly for the case that given
option is not zero.

Change-Id: Id5eba1b01c6aa095e9e346862842f0ca66a193ef
Reviewed-on: http://review.couchbase.org/74552
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>